authorization checked. tests added for authorization and auth controller Merge remote-tracking branch 'origin/master'